--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.8",
+    "aws-amplify": "^6.15.1",
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
     "lucide-react": "^0.511.0",
